test/invalid/var-recursive-nonfunc.js
var x = [[0], [x]];
x; // should fail, because in javascript the value of [x] above will be [undefined]
